--- a/package.json
+++ b/package.json
@@ -11,10 +11,24 @@
     "physics"
   ],
   "author": "AncientTemple",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/unanmed/cnb-physics"
   },
-  "files": ["index.js", "README.md", "src"]
+  "files": [
+    "index.js",
+    "README.md",
+    "src"
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.17.0",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "core-js": "^3.21.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2"
+  }
 }
